<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#FFFFFF"
                tools:title="添加新的服务器" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SettingActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="376dp"
                android:layout_height="202dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="17dp"
                app:cardBackgroundColor="#FFFEFE"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/key"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="348dp"
                    android:layout_height="104dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="65dp"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:singleLine="false" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="153dp"
                android:layout_marginTop="235dp"
                android:text="导入公钥"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="376dp"
                android:layout_height="202dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="235dp"
                app:cardBackgroundColor="#FFFEFE"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/IPAddress"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/SettingIPAddress"
                    android:layout_width="241dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="100dp"
                    android:text="@string/Port"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/SettingIPPort"
                    android:layout_width="240dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="136dp"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:inputType="number"
                    android:singleLine="true" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>